--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -6,7 +6,11 @@
 </head>
 <body>
 <h1>ghhh</h1>
-<a href="home.jsp">rggggrgrg</a>
 
+<form action="InsertImage.jsp">
+
+<input type="submit" value="submit">
+
+</form>
 </body>
 </html>
